# kirillkoms-claude-code-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  test
.github/workflows/: ci.yml  release.yml
crates/cc-analytics/: Cargo.toml
crates/cc-analytics/src/: events.rs  lib.rs  telemetry.rs
crates/cc-api/: Cargo.toml
crates/cc-api/src/: auth.rs  client.rs  errors.rs  lib.rs  retry.rs  streaming.rs  types.rs  usage.rs
crates/cc-api/src/providers/: bedrock.rs  direct.rs  foundry.rs  mod.rs  openai_compatible.rs  openai_translate.rs  openai_types.rs  vertex.rs
crates/cc-cli/: Cargo.toml
crates/cc-cli/src/: lib.rs  main.rs
crates/cc-commands/: CLAUDE.md  Cargo.toml
crates/cc-commands/src/: lib.rs  registry.rs  types.rs
crates/cc-commands/src/commands/: add_dir.rs  advisor.rs  agents.rs  ant_internal.rs  autofix_pr.rs  branch.rs  bridge_cmd.rs  brief.rs  btw.rs  bug.rs  bughunter.rs  chrome.rs  clear.rs  color.rs  commit.rs  commit_push_pr.rs  compact.rs  config.rs  context.rs  copy.rs  cost.rs  ctx_viz.rs  desktop.rs  diff.rs  doctor.rs  effort.rs  env_cmd.rs  exit.rs  export.rs  extra_usage.rs  fast.rs  feedback.rs  files.rs  good_claude.rs  help.rs  hooks.rs  ide.rs  init.rs  init_verifiers.rs  insights.rs  (+48 more)
crates/cc-compact/: Cargo.toml
crates/cc-compact/src/: autocompact.rs  compact.rs  grouping.rs  lib.rs  microcompact.rs  snip.rs
crates/cc-config/: Cargo.toml
crates/cc-config/src/: claude_md.rs  env.rs  lib.rs  model_config.rs  paths.rs  settings.rs  sync.rs
crates/cc-cost/: Cargo.toml
crates/cc-cost/src/: format.rs  lib.rs  model_costs.rs  tracker.rs
crates/cc-engine/: Cargo.toml
crates/cc-engine/src/: context.rs  file_history.rs  lib.rs  orchestration.rs  prompt_suggestion.rs  query_engine.rs  query_loop.rs  streaming.rs  token_budget.rs  tool_execution.rs
crates/cc-hooks/: Cargo.toml
crates/cc-hooks/src/: dispatch.rs  events.rs  lib.rs  session_hooks.rs  types.rs
crates/cc-mcp/: Cargo.toml
crates/cc-mcp/src/: auth.rs  client.rs  config.rs  lib.rs  normalization.rs  types.rs
crates/cc-multiagent/: .gitignore  Cargo.toml  README.md  build.rs
crates/cc-multiagent/examples/: basic_multi_agent.rs  collaborative_agents.rs
crates/cc-multiagent/src/: agent.rs  context.rs  errors.rs  ipc.rs  lib.rs  metrics.rs  pool.rs  router.rs  test_utils.rs
crates/cc-multiagent/tests/: integration_test.rs
crates/cc-permissions/: Cargo.toml
crates/cc-permissions/src/: bash_security.rs  checker.rs  denial_tracking.rs  lib.rs  modes.rs  path_validation.rs  policy_limits.rs  rules.rs
crates/cc-session/: Cargo.toml
crates/cc-session/src/: history.rs  lib.rs  memory.rs  persistence.rs  resume.rs  storage.rs
crates/cc-skills/: Cargo.toml
crates/cc-skills/src/: bundled.rs  lib.rs  loader.rs  plugin.rs
crates/cc-tasks/: Cargo.toml
crates/cc-tasks/src/: lib.rs  local_agent.rs  local_shell.rs  teammate.rs  types.rs  worktree.rs
crates/cc-tools/: Cargo.toml
crates/cc-tools/src/: context.rs  lib.rs  registry.rs  schema.rs  trait_def.rs
crates/cc-tools/src/tools/: agent.rs  ask_user.rs  bash.rs  communication.rs  config_tool.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lsp.rs  mcp_tools.rs  mod.rs  notebook_edit.rs  plan_mode.rs  powershell.rs  skill.rs  sleep.rs  task_tools.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs
crates/cc-tui/: Cargo.toml
crates/cc-tui/src/: app.rs  diff_view.rs  input.rs  keybindings.rs  lib.rs  markdown.rs  message_list.rs  permission_dialog.rs  progress.rs  render.rs  runner.rs  syntax.rs  themes.rs  tui_permission.rs
crates/cc-tui/src/widgets/: banner.rs  btw_overlay.rs  input_area.rs  messages.rs  mod.rs  permission_overlay.rs  status_bar.rs
crates/cc-types/: Cargo.toml
crates/cc-types/src/: command_types.rs  config.rs  content.rs  cost.rs  errors.rs  features.rs  hooks.rs  ids.rs  lib.rs  message.rs  permissions.rs  tool_types.rs
crates/cc-utils/: Cargo.toml
crates/cc-utils/src/: abort.rs  ansi.rs  clipboard.rs  cwd.rs  diff.rs  file_state.rs  format.rs  git.rs  hash.rs  image.rs  json.rs  lib.rs  lsp.rs  markdown.rs  path.rs  platform.rs  process.rs  shell.rs  string.rs  time.rs  tokens.rs
docs/: commands.md
docs/superpowers/plans/: 2026-04-02-docs-ux.md
docs/superpowers/specs/: 2026-04-01-openai-provider-hardening-design.md  2026-04-02-docs-ux-design.md
new-crate-test/: Cargo.toml
