[package]
name = "cc-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "claude-code"
path = "src/main.rs"

[dependencies]
cc-types = { workspace = true }
cc-engine = { workspace = true }
cc-tui = { workspace = true }
cc-config = { workspace = true }
cc-api = { workspace = true }
cc-tools = { workspace = true }
cc-commands = { workspace = true }
cc-session = { workspace = true }
cc-cost = { workspace = true }
cc-hooks = { workspace = true }
cc-utils = { workspace = true }
cc-mcp = { workspace = true }
cc-compact = { workspace = true }
cc-analytics = { workspace = true }
cc-skills = { workspace = true }
cc-tasks = { workspace = true }
cc-permissions = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
