[package]
name = "cc-commands"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
cc-engine = { workspace = true }
cc-config = { workspace = true }
cc-session = { workspace = true }
cc-utils = { workspace = true }
cc-cost = { workspace = true }
cc-hooks = { workspace = true }
cc-mcp = { workspace = true }
cc-permissions = { workspace = true }
cc-tasks = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
