[package]
name = "cc-compact"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
cc-api = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
