[package]
name = "cc-config"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
