[package]
name = "cc-cost"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
