[package]
name = "cc-hooks"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
cc-utils = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
