[package]
name = "cc-multiagent"
version = "0.1.0"
edition = "2021"
authors = ["Kirill <kk7453603@github>"]
description = "Multi-Agent Control Plane for Claude Code RS"
license = "SBSL-1.0"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Concurrency primitives
parking_lot = "0.12"
dashmap = "6.0"
crossbeam-channel = "0.5"

# IPC and networking
tower = "0.5"
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Process management
nix = { version = "0.29", features = ["process", "signal"] }
sysinfo = "0.31"

# Unique IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.12"
mockall = "0.13"
proptest = "1.5"

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "agent_pool"
harness = false

[features]
default = ["grpc", "metrics"]
grpc = []
metrics = ["prometheus", "opentelemetry"]
prometheus = ["prometheus-client"]
opentelemetry = ["opentelemetry-prometheus"]

[dependencies.prometheus-client]
version = "0.22"
optional = true

[dependencies.opentelemetry-prometheus]
version = "0.25"
optional = true