[package]
name = "cc-skills"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
