[package]
name = "cc-tasks"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
cc-utils = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
