[package]
name = "cc-tui"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
cc-tools = { workspace = true }
cc-config = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
insta = { workspace = true }
