[package]
name = "cc-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }

[features]
repl = []
proactive = []
kairos = []
kairos_webhooks = []
agent_triggers = []
agent_triggers_remote = []
monitor_tool = []
context_collapse = []
terminal_panel = []
web_browser = []
coordinator_mode = []
history_snip = []
uds_inbox = []
workflow_scripts = []
verify_plan = []
bridge_mode = []
voice_mode = []

[dev-dependencies]
insta = { workspace = true }
