[package]
name = "cc-utils"
version.workspace = true
edition.workspace = true

[dependencies]
cc-types = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
glob = { workspace = true }
similar = { workspace = true }
which = { workspace = true }
shell-words = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
